# TkSpeed

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json
.claude/: launch.json
.github/workflows/: ci.yml  release.yml
apps/desktop/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  main.tsx
apps/desktop/src/app/shell/: AppShell.tsx  ComingSoon.tsx  Placeholder.tsx  Sidebar.tsx  TitleBar.tsx  shell.css
apps/desktop/src/features/dashboard/: DashboardPage.tsx  ProtectionPanel.tsx  dashboard.css
apps/desktop/src/features/games/: GameCenterPage.tsx  (+2 more)
apps/desktop/src/styles/: global.css  tokens.css
crates/tk-analyzer/: Cargo.toml
crates/tk-analyzer/src/: bottleneck.rs  lib.rs  score.rs
crates/tk-contracts/: Cargo.toml
crates/tk-contracts/src/: lib.rs
crates/tk-core/: Cargo.toml
crates/tk-core/src/: lib.rs
crates/tk-monitor/: Cargo.toml
crates/tk-monitor/src/: lib.rs
crates/tk-optimize/: Cargo.toml
crates/tk-optimize/src/: catalog.rs  engine.rs  evidence.rs  lib.rs  machine.rs
crates/tk-optimize/src/capabilities/: matrix.rs  mod.rs
crates/tk-optimize/src/configs/: mod.rs  registry.rs  types.rs
crates/tk-optimize/src/profiles/: bundled.rs  engine.rs  evidence.rs  executor.rs  measurement.rs  mod.rs  model.rs  repo.rs
crates/tk-optimize/src/recommendations/: engine.rs  mod.rs  model.rs  scoring.rs
crates/tk-perflab/: Cargo.toml
crates/tk-perflab/src/: aggregate.rs  benchmark.rs  collector.rs  compare.rs  confidence.rs  detect.rs  frame.rs  hardware.rs  lib.rs
crates/tk-platform-win/: Cargo.toml
crates/tk-platform-win/src/: games.rs  lib.rs
crates/tk-rollback/: Cargo.toml
crates/tk-rollback/src/: lib.rs
crates/tk-storage/: Cargo.toml
crates/tk-storage/migrations/: 0001_init.sql  0002_perflab.sql  0003_confidence.sql  0004_optimize.sql  0005_v4_foundation.sql  0006_v4_machine_fingerprint.sql  0007_v4_session_source.sql  0008_v4_evidence.sql  0009_v4_profile_evidence.sql  0010_v50_game_center.sql
crates/tk-storage/src/: housekeeping.rs  lib.rs  repos.rs  tests.rs
docs/: 00-VISAO-GERAL.md  01-ARQUITETURA.md  02-MODULOS.md  03-ESTRUTURA-PASTAS.md  04-BANCO-DADOS.md  05-FLUXO-DADOS.md  06-DESIGN-SYSTEM.md  07-ROADMAP.md  08-SEGURANCA.md  09-ROLLBACK.md  10-MONETIZACAO.md  11-ESCALABILIDADE.md  12-CASOS-DE-USO.md  13-TKSPEED-SCORE.md  14-DIGITAL-TWIN.md  15-ESPECIFICACAO-TECNICA.md  16-WIREFRAMES.md  BETA-TESTER-CHECKLIST.md  CHANGELOG.md  FAQ.md  FEEDBACK-FORM.md  KNOWN-ISSUES.md  RELEASE-NOTES-0.1.0-rc1.md
docs/backlog/: 00-CONVENCOES.md  01-FASE1-MVP.md  02-FASE2-ALPHA.md  03-FASE3-BETA.md  04-FASE4-V1.md  05-FASE5-V2.md  06-PLANEJAMENTO.md  README.md  backlog.csv
docs/business/: 01-PRD.md  02-ADR.md  03-LICENCIAMENTO.md  04-DIFERENCIACAO.md  05-PLUGINS.md  06-TKAI-IA.md  07-PLANO-LANCAMENTO.md  08-MATRIZ-RISCOS.md  09-MERCADO-RECEITA.md  10-INVESTOR-DECK.md  README.md
docs/optimization-engine/: 01-ARQUITETURA.md  02-ESTRUTURA-DADOS.md  03-CATALOGO.md  04-PIPELINES.md  05-ADVISOR-PROFILES.md  06-BACKLOG-SLICES.md  README.md
docs/performance-lab/: 01-ARQUITETURA.md  02-METRICAS-E-COLETA.md  03-BENCHMARK-COMPARACAO.md  04-DETECTORES.md  05-WIREFRAME.md  06-BACKLOG.md  07-VALIDACAO.md  README.md
docs/release/: ALPHA-RELEASE.md  QA-ALPHA.md  TEST-MATRIX.md
docs/v3/: BRAND-GUIDE.md
motion/: package-lock.json  package.json
motion/src/: Root.tsx  TkSpeedShort.tsx  TkSpeedVideo.tsx  fonts.ts  tokens.ts
motion/src/components/: Background.tsx  EvidenceCard.tsx  FeatureCard.tsx  MetricBar.tsx  ScoreArc.tsx  SignalLockMeter.tsx  TextReveal.tsx
motion/src/scenes/: Scene01Intro.tsx  Scene02Problem.tsx  Scene03MissionControl.tsx  Scene04PerfLab.tsx  Scene05Optimization.tsx  Scene06Features.tsx  Scene07Outro.tsx
motion/src/scenes/short/: ShortAutoPilot.tsx  ShortDashboard.tsx  ShortFeatures.tsx  ShortHook.tsx  ShortIntro.tsx  ShortOutro.tsx  ShortProof.tsx
release/: CHANGELOG.md  Export-TkSpeedDiagnostic.ps1  FEEDBACK.md  LEIA-ME.txt  LICENSE-ALPHA.txt
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: events.rs  main.rs
src-tauri/src/bridge/: mod.rs
(+62 files in other folders)
