[workspace]
resolver = "2"
members = [
    "src-tauri",
    "crates/tk-contracts",
    "crates/tk-core",
    "crates/tk-monitor",
    "crates/tk-analyzer",
    "crates/tk-perflab",
    "crates/tk-optimize",
    "crates/tk-rollback",
    "crates/tk-storage",
    "crates/tk-platform-win",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Proprietary"
authors = ["TkSpeed"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "migrate"] }
ts-rs = "9"
async-trait = "0.1"

[workspace.dependencies.windows]
version = "0.58"
features = [
    "Win32_System_Registry",
    "Win32_System_Services",
    "Win32_System_Power",
    "Win32_System_Threading",
    "Win32_Foundation",
]
