[package]
name = "tkspeed"
version.workspace = true
edition.workspace = true
description = "TkSpeed — plataforma premium de performance para Windows"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = "0.2"

tk-core = { path = "../crates/tk-core" }
tk-contracts = { path = "../crates/tk-contracts" }
tk-storage = { path = "../crates/tk-storage" }
tk-monitor = { path = "../crates/tk-monitor" }
tk-analyzer = { path = "../crates/tk-analyzer" }
tk-perflab = { path = "../crates/tk-perflab" }
tk-optimize = { path = "../crates/tk-optimize" }
tk-rollback = { path = "../crates/tk-rollback" }
