[package]
name = "tk-rollback"
version.workspace = true
edition.workspace = true

[dependencies]
tk-contracts = { path = "../tk-contracts" }
tk-storage = { path = "../tk-storage" }
tk-platform-win = { path = "../tk-platform-win" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
