[package]
name = "tk-storage"
version.workspace = true
edition.workspace = true

[dependencies]
tk-contracts = { path = "../tk-contracts" }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
tempfile = "3"
